--- a/reflections/week01/01.md
+++ b/reflections/week01/01.md
@@ -7,6 +7,7 @@
 ## Questions
 
 1. In your own words, why do we use Git?
+    - example answer
 
 2. What are the benefits of having multiple branches?
 
