--- a/reflections/week01/01.md
+++ b/reflections/week01/01.md
@@ -7,9 +7,10 @@
 ## Questions
 
 1. In your own words, why do we use Git?
-    - example answer
+    - Git is basically used like a save option in a video game. It is able to store changes in code in order to push or pull different versions of the same file.
 
 2. What are the benefits of having multiple branches?
+    - Multiple branches are usually used to support different roads of development. For example, maybe a developer wants to add a change to the code. So the repository creator might add another branch for the developer to make changes in so they can push their work together.
 
 3. What is the difference between Git and GitHub?
 
