--- a/reflections/week01/01.md
+++ b/reflections/week01/01.md
@@ -13,9 +13,11 @@
     - Multiple branches are usually used to support different roads of development. For example, maybe a developer wants to add a change to the code. So the repository creator might add another branch for the developer to make changes in so they can push their work together.
 
 3. What is the difference between Git and GitHub?
+    - Git is the tool that allows you to push, pull, and commit changes to code. Github is the site where you can look up and edit someone else's code that was committed to Git.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+    - Git is the primary cooperation tool between developers. Not only is it meant to serve as a backup if any changes happen to be lost, but it also allows developers to share their work far easier.
