--- a/reflections/week01/01.md
+++ b/reflections/week01/01.md
@@ -17,7 +17,7 @@
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/fs-journal)**
 
 Identify at least 1 takeaway from today's assignment
     - Git is the primary cooperation tool between developers. Not only is it meant to serve as a backup if any changes happen to be lost, but it also allows developers to share their work far easier.
