--- a/reflections/week01/02.md
+++ b/reflections/week01/02.md
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's assignment
 
-- CSS is one of the many primary front-end languages that organizes HTML for a better user experience. 
+- CSS is one of the many primary front-end languages that organizes HTML for a better user experience. One of the most important features in CSS is flexbox, considering that it puts HTML content in boxes which can then be repositioned anywhere else on the page.
