group journal commit

--- a/reflections/week01/02.md
+++ b/reflections/week01/02.md
@@ -20,7 +20,7 @@
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/fs-journal)**
+**[Repo](https://doctorgrant99.github.io/ProjectRepo/PROJECTNAME/)**
 
 Identify at least 1 takeaway from today's assignment
 
