--- a/reflections/week01/03.md
+++ b/reflections/week01/03.md
@@ -8,12 +8,20 @@
 
 1. What is your favorite tip for improving your design? How does it benefit your site?
 
+- I like using shadows on boxes since it makes the content a little livelier. The shadows are also more eye-grabbing and are more likely to engage users since the boxes will look more like physical objects.
+
 2. Compile a couple of resources that you think might be helpful when trying to review examples of good design ideas.
+
+- Keeping icons at a reasonable size seems like a decent idea if you want to use them to keep your buttons proportional compared to other objects on the site. Using extra spacing between elements would also be useful, since it would help the users avoid misclicks.
 
 3. How do you think good design influences people when visiting a website, and what sorts of things could you convey through design alone?
 
+- Giving a website an aesthetic layout will provide a better experience for the people who use it. Good design can also make each different element distinct from each other, making the whole page more intuitive.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/BootstrapProject.git)**
 
 Identify at least 1 takeaway from today's assignment
+
+- Bootstrap seems to be the best shortcut to use in place of CSS. Of course it can't apply every single change CSS can, and it sometimes clashes with CSS if you try to change a selector. But, it does provide a better alternative to having an overwritten stylesheet.
