--- a/reflections/week01/04.md
+++ b/reflections/week01/04.md
@@ -8,12 +8,20 @@
 
 1. What is the purpose of ***wireframing***? 
 
+- Wireframing creates the initial skeleton of a webpage; basically the first prototype. They can be fast and easy to create which is why they are often used as a comparison reference to the webpage being built.
+
 2. What are the different levels of detail in wireframes, and why is each one useful?
 
+- There are low-fidelity, mid-fidelity, and high-fidelity wireframes and each one is distinguished by the details they contain. Low-fidelity is best used during meetings to decide on a concept, mid-fidelity is used for more precise layouts, and high-fidelity should be used to produce the final concept design.
+
 3. Do you think wireframes are worth the time, energy, and effort that they require? Why or Why not?
+
+- Wireframes should always be used to sketch out any kind of detailed site. Designing anything without a reference can be difficult at best, especially if there's no clear vision on the end product.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+- 
