final journal 4 commit

--- a/reflections/week01/04.md
+++ b/reflections/week01/04.md
@@ -20,8 +20,8 @@
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/clone_thursday.git)**
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- Wireframes tend to be vital for using Bootstrap to develop webpages. Having a concept to work with eliminates a lot of unneeded effort on the designing process.
