last journal 5 commit

--- a/reflections/week01/05.md
+++ b/reflections/week01/05.md
@@ -6,3 +6,5 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 - What did you learn that was a shock or surprise?
 - What are you struggling with?
 - What would you count as a victory?
+
+- I am starting to get a lot better with Git, which will undoubtedly help me learn it as a reflex. Which leads me to what I'm not so good at: Bootstrap. It's a good thing it has a docs page, which will help since there's so much to reference. Learning to clone a webpage is a step in the right direction at least, so I won't be completely lost as long as I keep referencing my work.
