group commit on journals week 2 and quiz 2

--- a/reflections/week02/01.md
+++ b/reflections/week02/01.md
@@ -8,12 +8,19 @@
 
 1. What is ***scope***?
 
+- Scope basically refers to the context of a piece of code where a variable is able to be used. For example, a variable declared inside of a function is only relevant in the scope of that function and nowhere else.
+
 2. What is ***Hoisting***?
+
+- Hoisting is the action of lifting a declaration to the top of the scope before the function its paired with executes. However, the function will return undefined if you don't specify the context of the function.
 
 3. In what cases might you use `let` vs. `const` vs. `var`?
 
+- Let is usually used in the scope of a block, even though it can be declared outside of a function. This is why it is preferred over var, because var is globally scoped, meaning that it will apply itself to every function in the file. Const declares values in the code that you would want to stay unchanging in the entire file.
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+- 
