--- a/reflections/week02/02.md
+++ b/reflections/week02/02.md
@@ -8,12 +8,19 @@
 
 1. What are the three ways to syntactically write a function? What are the differences in how the function acts (if any)?
 
+- There are function declarations that rely on hoisted definitions, and function expressions which defines an anonymous function with a variable. And finally, the arrow function which is basically a shorter function expression.
+
 2. What is the main difference between ***parameters*** and ***arguments***?
 
+- The most important difference between the two, is that the parameters are defined in the function in between the parentheses. The arguments on the other hand, are the actual values the function calls when it executes.
+
 3. What are ***higher-order functions***? Can you provide an example?
+
+- Higher-order functions are functions that use another function as its parameter or it returns a different function when executed. Array.prototype.map happens to be one those high-order functions.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+- 
