journal 1 final commit

--- a/reflections/week02/01.md
+++ b/reflections/week02/01.md
@@ -19,8 +19,8 @@
 - Let is usually used in the scope of a block, even though it can be declared outside of a function. This is why it is preferred over var, because var is globally scoped, meaning that it will apply itself to every function in the file. Const declares values in the code that you would want to stay unchanging in the entire file.
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/score_table.git)**
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- This is apparently the introduction to variables and draw functions in javascript. It also shows how to call id's from HTML elements.
