--- a/reflections/week02/03.md
+++ b/reflections/week02/03.md
@@ -12,11 +12,11 @@
 
 2. Which tab allows you to see the breakdown of HTML/CSS, and how can this tab be useful when debugging HTML?
 
-- 
+- The elements tab is the place to find the HTML and CSS in the dev tools. It can also edit the code without directly changing it in the editor, so using it as a debugging tool is particularly useful. 
 
 3. Instead of writing everything to the console, what is a better way to debug your code?
 
-- 
+- One way is to make generous use of break points if there are a lot of issues with the code. Break points can pause selected lines of code, and persist until they are deselected in the source tab.
 
 ## Afternoon Assignment Link
 
