last journal 2 commit

--- a/reflections/week02/02.md
+++ b/reflections/week02/02.md
@@ -20,7 +20,7 @@
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/Warehouse)**
 
 Identify at least 1 takeaway from today's assignment
-- 
+- The assignment mostly focused on draw functions and filters, so I'm assuming that these functions will be further elaborated on in later projects. They also seem to be used to output the information in an array in different combinations which is important to an application that wants functionality.
