finished a few journals and a quiz

--- a/reflections/week02/03.md
+++ b/reflections/week02/03.md
@@ -8,7 +8,7 @@
 
 1. What are the main ways to write information to the console? Why/when should you use each style?
 
-- 
+- You can write in conditional statements that will evaluate to true or false in order to quickly debug without changing the code in the editor. You can also put in console.log if you want the console to return a specific message. And finally, you can also write the functions themselves if you want to test them first before writing them in the editor.
 
 2. Which tab allows you to see the breakdown of HTML/CSS, and how can this tab be useful when debugging HTML?
 
