--- a/reflections/week02/04.md
+++ b/reflections/week02/04.md
@@ -8,12 +8,20 @@
 
 1. What are the benefits of making a plan for your application before starting to write the code?
 
+- If no planning is done on any large application, then you can find yourself writing a whole lot of lines that won't make sense to any other line you write later. Thinking about each function and array works in tandem with code you haven't even written yet could save a lot time.
+
 2. How do you find answers when you are stuck?
 
+- I usually refer to applications that I already completed to rely on what I do next. If that doesn't work, then I will ask google or someone more experienced than me for help.
+
 3. What coding mistakes would you be most likely to make? What advice from this article do you find most helpful?
+
+- The mistake I make the most is that I have no idea when to use one data structure over another. The best piece of advice to take is to make comments on what you would want a line of code to do, this seems like a good way of sketching out ideas for later.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+- 
