--- a/reflections/week02/03.md
+++ b/reflections/week02/03.md
@@ -20,8 +20,8 @@
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/ice_cream)**
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- The assignment was meant to elaborate on string interpolation and using functions to draw on HTML. It also introduced multiple arrays with objects, and went more in-depth on how to draw object properties from them.
