--- a/reflections/week02/04.md
+++ b/reflections/week02/04.md
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- I had a feeling that this assignment was supposed to get us to think about the abstract idea of how to make arrays interact with objects declared outside of them. It seemed like the functions meant to update the different properties of the external object would only work with a function that would find the properties of specific array objects.
