--- a/reflections/week03/01.md
+++ b/reflections/week03/01.md
@@ -8,12 +8,20 @@
 
 1. What problem does using ***exports*** solve?
 
+- It can keep functions from getting too long and cluttering up the application. It also allows you use exported snippets of javascript in other parts of the code.
+
 2. How does `export` differ from `export default`?
+
+- Export defaults are only used for specific snippets of code in a different file, like an object or a function. Normal exports can be used for entire files if needed.
 
 3. What is a benefit of using the "module" system?
 
+- Modules can allow multiple scripts to be concatenated, giving it better performance. 
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/game_night.git)**
 
 Identify at least 1 takeaway from today's assignment
+
+- 
