finished journal 1 started journal 2

--- a/reflections/week03/01.md
+++ b/reflections/week03/01.md
@@ -16,7 +16,7 @@
 
 3. What is a benefit of using the "module" system?
 
-- Modules can allow multiple scripts to be concatenated, giving it better performance. 
+- Modules can get rid of naming issues in different files. For example, a multiplyAll() function in one module can have a different function called the same thing in another, and not throw an error.
 
 ## Afternoon Assignment Link
 
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- The game night project is an introduction to the MVC model, and usage of imports and exports. Making sure the imports and exports are correctly placed is vital if you don't want to end up with a reference error.
