--- a/reflections/week03/02.md
+++ b/reflections/week03/02.md
@@ -8,12 +8,20 @@
 
 1. What is the purpose of ***Encapsulation***?
 
+- To reduce the reliance a set of data structures have for each other. This reliance can lead to shared mutable states, which will demand debugging for those structures.
+
 2. What were some of the problems with ***closures*** and the ***underscore prefix*** convention?
+
+- This paradigm has allowed for a greater surface of hacker exploitation in public API's since most of that data was externally exposed. The convention was not self-documenting either, which sometimes gave users access to properties they were not supposed to use.
 
 3. How do we create private variables in an ES6 `Class`? Why would you do this?
 
+- 
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/Vendr.git)**
 
 Identify at least 1 takeaway from today's assignment
+
+- 
