--- a/reflections/week03/02.md
+++ b/reflections/week03/02.md
@@ -16,7 +16,7 @@
 
 3. How do we create private variables in an ES6 `Class`? Why would you do this?
 
-- 
+- ES6 classes use the hash prefix to make private variables that create privacy encapsulation. This method is used on projects where a users personal information may be involved, and renders these fields externally invisible. 
 
 ## Afternoon Assignment Link
 
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- Since MVC got its impromptu introduction yesterday, the new project seems to serve the same purpose as the last assignment. This subject is relatively alien right now, so this project may be trying to build familiarization.
