group journal and quiz commit

--- a/reflections/week03/03.md
+++ b/reflections/week03/03.md
@@ -8,12 +8,20 @@
 
 1. What are the two common operations that we will set in the ***handler***?
 
+- They are get and set, the get operation is used to return stored values in an object and takes two arguments. The set operation can take three arguments and is used to set an object property to a value.
+
 2. What do you have to make sure you are doing with every `get` to ensure the value does not become `undefined`?
+
+- The undefined is returned whenever the function doesn't get a property argument. If there is no property to access then the operation doesn't have an object key to find.
 
 3. What are some of the benefits of the `Proxy` object that we are using in our structure for applications?
 
+- It can be used to throw errors whenever we want to make a property private. The proxy will override the get operation if a specific object property is in the act of being accessed.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/gregslist)**
 
 Identify at least 1 takeaway from today's assignment
+
+- Experiencing repetition with MVC will hopefully build familiarity, which is something I'm starting to see this week. Controllers and services are starting to look a little less strange now on the third day, which is why I'm assuming that we're starting to work with multiple arrays and objects now.
