--- a/reflections/week03/04.md
+++ b/reflections/week03/04.md
@@ -8,12 +8,20 @@
 
 1. What problems does the ***observer pattern*** seek to solve?
 
+- It is used to solve the problem of synchronization in javascript, since some events in the code need to be kept up to date with the amount of data they push. Keeping that data going on a page while a user delivers their input can be challenging.
+
 2. What are the three mechanisms of the observer pattern?
 
+- 
+
 3. Review the code generated from the bcw-template, and reflect on the `Proxy` objects from yesterday and your understanding of the observer pattern today. With this knowledge, explain how the magic of the bcw-template uses these two concepts to manage and update the DOM.
+
+- 
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+- 
