finished quiz and updated journal

--- a/reflections/week03/04.md
+++ b/reflections/week03/04.md
@@ -12,7 +12,7 @@
 
 2. What are the three mechanisms of the observer pattern?
 
-- 
+- The subscribe method, unsubscribe method, and the broadcast method. These methods are capable of adding, removing, and iterating events respectively.
 
 3. Review the code generated from the bcw-template, and reflect on the `Proxy` objects from yesterday and your understanding of the observer pattern today. With this knowledge, explain how the magic of the bcw-template uses these two concepts to manage and update the DOM.
 
