--- a/reflections/week03/04.md
+++ b/reflections/week03/04.md
@@ -16,12 +16,12 @@
 
 3. Review the code generated from the bcw-template, and reflect on the `Proxy` objects from yesterday and your understanding of the observer pattern today. With this knowledge, explain how the magic of the bcw-template uses these two concepts to manage and update the DOM.
 
-- 
+- It seems that proxies are meant to return a value inside an object, and the observer methods are supposed to give those values somewhere to go in another file. This appears to be the point of the observer pattern.
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/fruit_salad)**
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- Fruit salad seems like it was meant to apply timeout functions to an application being built by MVC. But, I think that learning about the saveState is more important, since it is the structure necessary to save any data that has been inputted to the page.
