--- a/reflections/week04/01.md
+++ b/reflections/week04/01.md
@@ -8,12 +8,20 @@
 
 1. What are some of the signs and causes of 'callback hell'?
 
+- Callback hell happens whenever people try to get javascript to execute their code visually from top to bottom. The lines will usually look like a pyramid flipped on its side, and it will try to execute its first line before moving on to the second.
+
 2. What does ***asynchronous*** mean, and how are callbacks involved?
+
+- The asynchronous term only means that whatever function it executes will take time to do so. Since async can be used to delay a function, it can be used in a callback to ease the execution time of whatever the callback is trying to do.
 
 3. Summarize the 3 ways to avoid/fix 'callback hell.'
 
+- 
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/Trivia)**
 
 Identify at least 1 takeaway from today's assignment
+
+- 
