--- a/reflections/week04/01.md
+++ b/reflections/week04/01.md
@@ -16,7 +16,7 @@
 
 3. Summarize the 3 ways to avoid/fix 'callback hell.'
 
-- 
+- Make the code shallow in order to give the functions more descriptive function names. Make small modules that each perform a specific task, and always have a plan to handle every single error the code can throw.
 
 ## Afternoon Assignment Link
 
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- Async functions appear to be prominent in writing code with API, which would make sense since async seems to work best with moving around data on a delay. This would be useful when working with a generated API.
