finished journal 2 answered some quiz questions

--- a/reflections/week04/02.md
+++ b/reflections/week04/02.md
@@ -8,20 +8,20 @@
 
 1. What are the three states of a `Promise`?
 
-- 
+- The first state is called pending, which is where the promise currently stands before anything is done to it. Then there is resolved state where the promise is completed, and the rejected state where the promise fails.
 
 2. How do `Promise`s seek to resolve the issues of 'callback hell'?
 
-- 
+- Using promises to work around callback hell is technique known as chaining. This works better than just using multiple asyncs at once, because you can just attach the callbacks to the promise.
 
 3. What is the difference between `.then()` and `.catch()`?
 
-- 
+- The then() method is used to call a resolved promise so that the function calling it will be able to do something with it. Catch() methods are used for rejected promises, and are usually used to return a message indicating that the promise is rejected.
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/spring23-asyncGregslist)**
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- The assignment seems like more practice in API generation, except that it relies on asynchronous functionality even more. API's are especially dependent on asyncs, because they probably couldn't be implemented into an MVC pattern otherwise.
