pasting assignment link

--- a/reflections/week04/03.md
+++ b/reflections/week04/03.md
@@ -8,12 +8,20 @@
 
 1. What is the purpose of `async`/`await`?
 
+- They are meant to shorten promise boilerplates in order to avoid callback hell. 
+
 2. What must you do in order to `await` a promise inside of a function?
+
+- 
 
 3. What are some of the primary benefits of `async`/`await`?
 
+- 
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/pokedex)**
 
 Identify at least 1 takeaway from today's assignment
+
+- 
