--- a/reflections/week04/03.md
+++ b/reflections/week04/03.md
@@ -8,15 +8,15 @@
 
 1. What is the purpose of `async`/`await`?
 
-- They are meant to shorten promise boilerplates in order to avoid callback hell. 
+- They are meant to shorten promise boilerplates in order to avoid callback hell. The syntax doesn't solve all of the problems imposed by callback hell, but at least it makes the code easier to read.
 
 2. What must you do in order to `await` a promise inside of a function?
 
-- 
+- The function the await is used in has to be defined as an async first. Since promises are directly tied to the syntax of async functions, the promise cannot be resolved or rejected without the async.
 
 3. What are some of the primary benefits of `async`/`await`?
 
-- 
+- Async functions can be chained far more easily than other high-order functions. This will make the function easier to read when the code starts to get more complex later down the line.
 
 ## Afternoon Assignment Link
 
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- The pokedex assignment introduced the usage of an axios service in the MVC model. Having the API export links in another file actually makes sense, since it cleans up the other services in the template by not having to directly export it from there.
