--- a/reflections/week04/04.md
+++ b/reflections/week04/04.md
@@ -20,7 +20,7 @@
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/gifted)**
 
 Identify at least 1 takeaway from today's assignment
 
