--- a/reflections/week04/04.md
+++ b/reflections/week04/04.md
@@ -8,15 +8,15 @@
 
 1. What does ***REST*** stand for, and in simple terms what does it mean?
 
-- 
+- REST is supposed to mean representational state transfer and it directs a set of rules that link applications together. It basically eliminates the need for more complex data that would need to be applied in order to integrate applications.
 
 2. What does ***stateless*** mean?
 
-- 
+- Stateless is used to describe how an application should remain blind to what another application is doing. This will allow the server to treat every query made as a new query when a request is made.
 
 3. What URL pattern is used when writing a ***RESTful API***?
 
-- 
+- A JSON parse is probably the best pattern that can convert an API to javascript right now. If you can parse an API's data with JSON, then you will be able to send it wherever it needs to go while following th rules of REST.
 
 ## Afternoon Assignment Link
 
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- The most difficult part of this was trying to flip a boolean from the API. Using an if statement in the function was part of the solution, but it needed the correct use of a splice method in order to change the boolean on command.
