answered two questions

--- a/reflections/week05/01.md
+++ b/reflections/week05/01.md
@@ -8,12 +8,20 @@
 
 1. What is the purpose of a ***query string***?
 
+- Query strings are capable of exchanging information between code and a website. If a question mark is added to a url, then whatever follows after it will be the query string being passed.
+
 2. What is the format of a ***query parameter***? How does it start? How do you distinguish between one parameter and the next?
 
+- Query strings are written at the end of a url after a question mark is added, if more than one parameter needs to be included, then they can be strung together with an '&'. This can only happen though, if the query is made equal to its respective value.
+
 3. When do you think query parameters would be helpful when writing your server?
+
+- 
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+- 
