--- a/reflections/week05/01.md
+++ b/reflections/week05/01.md
@@ -16,12 +16,12 @@
 
 3. When do you think query parameters would be helpful when writing your server?
 
-- 
+- Query parameters would be the most useful with arrays of objects, since you can use query strings to parse certain values attached to those objects. Using the square brackets in the string itself will even parse an object as a parameter.
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/burger_shack)**
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- Burger shack was just a simple introduction to nodejs, and practice with the tools needed to build an application on the back-end. The assignment mostly focused on the postman app, most likely because it allows you to build an API.
