--- a/reflections/week05/02.md
+++ b/reflections/week05/02.md
@@ -8,12 +8,20 @@
 
 1. What are the three types of data relationships?
 
+- The one-to-one relationship refers to the link between two entities, the one-to-many relationship describes how a group can only be linked to one entity. And finally, the many-to-many relationship refers to two separate entities that are both linked to groups.
+
 2. What are the benefits of traditional ***linking*** relationships over ***embedding*** relationships?
+
+- 
 
 3. When modeling data, it's important to consider how a user will use and filter that data. How does this affect the way you model a ***many-to-many*** relationship? 
 
+- 
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/spring23_gregslistNode)**
 
 Identify at least 1 takeaway from today's assignment
+
+- 
