--- a/reflections/week05/02.md
+++ b/reflections/week05/02.md
@@ -12,11 +12,11 @@
 
 2. What are the benefits of traditional ***linking*** relationships over ***embedding*** relationships?
 
-- 
+- In linking, it would be better to use it in a one to many relationship, because it helps to keep a posting application from running over to its maximum document size. Using embedding instead would only result in a larger array.
 
 3. When modeling data, it's important to consider how a user will use and filter that data. How does this affect the way you model a ***many-to-many*** relationship? 
 
-- 
+- Users will often gravitate towards an application that can effectively deliver the information they want, which is why certain embedding strategies need to be chosen in order to provide the service. One way embedding is a good way of helping a user filter data by nesting them into specific categories in the code.
 
 ## Afternoon Assignment Link
 
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- Using gregslist for server-side coding seems to be a good form of practice when it comes to using mongo and auth0. These new tools are vital for building API's, using them to build an env file was also interesting when you think about how it's used to keep an API secure.
