answered some questions

--- a/reflections/week05/03.md
+++ b/reflections/week05/03.md
@@ -7,12 +7,20 @@
 
 1. In simple terms what is ***timeboxing***?
 
+- It is basically organized time management that calls for a specific task to be completed in a set amount of time. It's supposed to make sure an acceptable amount of time is spent on a certain goal so that no time is wasted on that task.
+
 2. What three strategies will you implement and how?
+
+- You can time yourself in order to record how much time you spend on a goal, and you can also set a time limit on that while scheduling appropriately timed breaks. Keeping track of what you already accomplished us useful as well, not only for yourself, but also for whoever you are working with.
 
 3. Give an example of when you would have benefitted from timeboxing and how? 
 
+- There was a point in the Jot checkpoint where I was stuck on writing an edit function for a note, I tried to get that done along with a bunch of other requirements, except that didn't do me much good. After I got stuck on it for an hour I started to take periodic five-minute breaks for the rest of the day and started working on other things, timeboxing like that actually works out pretty well.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/planets)**
 
 Identify at least 1 takeaway from today's assignment
+
+- Virtuals are one of the problems in the assignment that I don't quite understand yet, 
