finished quiz and journals

--- a/reflections/week05/03.md
+++ b/reflections/week05/03.md
@@ -23,4 +23,4 @@
 
 Identify at least 1 takeaway from today's assignment
 
-- Virtuals are one of the problems in the assignment that I don't quite understand yet, 
+- Virtuals are one of the problems in the assignment that I don't quite understand yet, I know they are supposed to define values for a model, but I'm not sure how they affect everything else yet. The service files in node.js seem to be the only thing that hasn't changed much so at least that will remain familiar in the course.
