--- a/reflections/week05/04.md
+++ b/reflections/week05/04.md
@@ -8,12 +8,20 @@
 
 1. What is a ***virtual property***?
 
+- Virtuals are model fields that can have fuction values plugged into them, those values can be strings, numbers, or any other kind of value that needs to be defined from the server. Most of the time they can communicate personal information, this can be done by using string concatenation to get that information.
+
 2. When might you use a virtual property? 
 
+- They will need to be used whenever data from a model needs to be referenced in another file, specifically in the get and set methods. However, string concatenation would have to be applied in order to retrieve the values from the virtuals.
+
 3. How do you search by a virtual property's value?
+
+- The get and set methods are the primary ways of searching for a value in a virtual and they both have different ways to do it. The get method will concatenate whatever values it calls and prints them, while the set method will use string splitting to roughly achieve the same result.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+- Since there was no assignment on Thursday, the only thing left to talk about is the lecture and the hackathon. However, the most important thing I noticed about the hackathon was that the application being built turned out to be much more complex than the one in the lecture. There were far more service and controller files for one, it made me wonder if there was another way to simplify the application.
