--- a/reflections/week06/01.md
+++ b/reflections/week06/01.md
@@ -8,12 +8,20 @@
 
 1. What is ***Component-Based Architecture***?
 
+- Component based architecture is a framework designed to split a user interface into independent systems that can support a much larger interface. CBA does this by encapsulating certain components in order build up an application that does not require a great deal of debugging.
+
 2. What are some benefits of Component-Based Architecture?
 
+- 
+
 3. What are some drawbacks to Component-Based Architecture?
+
+- 
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+- 
