--- a/reflections/week06/01.md
+++ b/reflections/week06/01.md
@@ -12,16 +12,16 @@
 
 2. What are some benefits of Component-Based Architecture?
 
-- 
+- One advantage is that component based architecture updates dynamically, which means that the application refreshes automatically whenever a component is changed. Also, the components of the application can hold all the languages it needs in a single class so that a developer won't need to spend so much time sifting through a bunch of files looking for an error.
 
 3. What are some drawbacks to Component-Based Architecture?
 
-- 
+- CBA's biggest drawback is how it can be over-engineered if handled incorrectly, treating every single piece of functionality as a component would be an example of that. This is an easy mistake to make in CBA, but it can be avoided if the components are only used in the specific instances when they're needed.
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/CodeWorks-FullStack/spring23_vue_miner)**
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- The vue playground was an interesting assignment to introduce vue, since there was no need to really build anything with it. I kind of liked how vue would automatically refresh the application after it was updated, vue could become really easy to use if there wasn't so much to absorb.
