answered journal and quiz questions

--- a/reflections/week06/02.md
+++ b/reflections/week06/02.md
@@ -8,12 +8,20 @@
 
 1. What are ***props***?
 
+- Props are methods that are capable of passing around data from one component to another, this allows other components to access values they wouldn't have otherwise. They are most often used in vue for this purpose by acting as function arguments in the language.
+
 2. What are props used for?
+
+- They are used to act as one way data flow methods in order to pass data from a parent and a child, meaning that they can only pass values to another component to children only. The data cannot be modified by a child either, but structuring the flow like this can make it easier to track bugs.
 
 3. Where can props be used or accessed?
 
+- 
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/gifted_vue)**
 
 Identify at least 1 takeaway from today's assignment
+
+- 
