--- a/reflections/week06/03.md
+++ b/reflections/week06/03.md
@@ -8,12 +8,20 @@
 
 1. What are ***lifecycle hooks***? What are lifecycle hooks used for?
 
+- 
+
 2. How have you used lifecycle hooks in your afternoon projects?
+
+- 
 
 3. What are ***mounting hooks***? When might you use them?
 
+- 
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/spring23_gregslist_vue)**
 
 Identify at least 1 takeaway from today's assignment
+
+- 
