--- a/reflections/week06/02.md
+++ b/reflections/week06/02.md
@@ -16,7 +16,7 @@
 
 3. Where can props be used or accessed?
 
-- 
+- Props can be effectively used in javascript methods that can call the values of the components they are assigned to. They can also be accessed in the template so long as they are called correctly, in the script however, sometimes a string interpolation will be needed to access certain values from the props.
 
 ## Afternoon Assignment Link
 
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- The gifted assignment was an interesting review since it had to made with a different language, but for some reason it wasn't as difficult as the first gifted. The hardest part was getting the boolean to render so that the cards could be opened and closed by clicking them.
