--- a/reflections/week06/03.md
+++ b/reflections/week06/03.md
@@ -8,15 +8,15 @@
 
 1. What are ***lifecycle hooks***? What are lifecycle hooks used for?
 
-- 
+- Lifecycle hooks are a way to look at a vue component under the hood, and also allows you to see when they are created or updated. There many different hooks that can used for whatever you need to use a component for, be it creating, changing, or deleting a component.
 
 2. How have you used lifecycle hooks in your afternoon projects?
 
-- 
+- I have used the onmount hook to render my components on whatever page I need to see them on, however I don't have much experience using the other ones. But, I do know how to use the mount hook to access and modify the components in the DOM.
 
 3. What are ***mounting hooks***? When might you use them?
 
-- 
+- There are a few different kinds of mounting hooks that can render components at different times, for example you can use beforemount to run selected code first before rendering any components. On the other hand, using an onmount hook will run the code and render the component at the same time in order to see the component and change the DOM at the same time.
 
 ## Afternoon Assignment Link
 
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- Gregslist wasn't that hard to understand when it was first assigned, and even though vue was only just introduced this week, it has made building that application easier. The hardest aspect of it was probably just figuring out how to get the vue props to work instead of the javascript services.
