--- a/reflections/week06/04.md
+++ b/reflections/week06/04.md
@@ -8,12 +8,20 @@
 
 1. What is a **nested route***?
 
+- 
+
 2. When might you use a nested route? (other than the provided example)
+
+- 
 
 3. Can you pass parameters through nested routes? When might you use them?
 
+- 
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/blogger_vue)**
 
 Identify at least 1 takeaway from today's assignment
+
+- 
