--- a/reflections/week06/04.md
+++ b/reflections/week06/04.md
@@ -8,15 +8,15 @@
 
 1. What is a **nested route***?
 
-- 
+- Nested routes are pieces of code that can direct multiple components on a single page nesting them together which will give a better user interface. Since Vue is a single page application, nesting components with these routes will become necessary the more complex the application gets.
 
 2. When might you use a nested route? (other than the provided example)
 
-- 
+- Nested routes will have to be used whenever a page needs to redirect to multiple components, which will be needed when you will want to use those components to direct to other pages. Nesting the children in that specific route will allow the router to take the user to pages that the children direct to.
 
 3. Can you pass parameters through nested routes? When might you use them?
 
-- 
+- Passing parameters through nesting routes should be used whenever you want a specific element in the page template to direct you to another page. This would usually happen when you want that single element in the component to redirect to a page instead of the entire component redirecting.
 
 ## Afternoon Assignment Link
 
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- Blogger seems like an oversimplified practice run for the checkpoint to me, since most of the logic was based around editing, creating, and rendering components for a page. There was also a bit of functionality for rendering profiles and such, so I'm assuming that this may allow for the editing of some profiles.
