--- a/reflections/week07/01.md
+++ b/reflections/week07/01.md
@@ -8,12 +8,20 @@
 
 1. What is ***pair programming***? What are the roles and how do they work?
 
+- Pair programming uses the roles of a 'driver' and a 'navigator' to work on a single goal with a single workstation. This method of working 
+
 2. What are some benefits of pair programming?
 
+- 
+
 3. What are some drawbacks to pair programming?
+
+- 
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+- 
